...
  }

  return (
    <Container>
      <ScrollView style={styles.container}>
        <MyImageButton
          testID="backArrowTestId"
          onPress={handleBackPressed}
          name="ic_back"
          resizeMode="contain"
          style={styles.backButton}
        />
        {isLoading ? (
...
