...
          Speed{"\n"}
          <MyText style={styles.values}>{vehicle.chargeSpeedInKw}kW</MyText>
        </MyText>
      </View>

      {charge.percentage == 100 && (
        <MyText style={styles.fullChargedMessage}>Full Charged :)</MyText>
      )}
    </View>
  );
};

export default ChargingBar;
...
